--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "grunt-contrib-cssmin": "~0.9.0",
     "grunt-contrib-imagemin": "~0.5.0",
     "grunt-contrib-htmlmin": "~0.2.0",
-    "grunt-contrib-jasmine": "~0.5.2"
+    "grunt-contrib-jasmine": "~0.5.2",
+    "grunt-contrib-watch": "~0.6.0"
   },
   "engines": {
     "node": ">=0.8.0"
